--- a/.env
+++ b/.env
@@ -4,8 +4,8 @@ API_LOCAL_PORT=3000
 POSTGRES_HOST=127.0.0.1
 POSTGRES_PORT=5432
 POSTGRES_LOCAL_PORT=5432
-POSTGRES_USER=azimjon
-POSTGRES_PASSWORD=azimjon
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=muslimbek
 POSTGRES_DB=portfolio
 
 ACCESS_TOKEN_KEY=MyAccessVeryVerySecretKey12345
